Add initial backend and frontend setup; modify model schema;vconfigure WSGI, Celery, and Dockerfiles; implement API filters and update routing

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,13 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Download NLTK data
+RUN python -m nltk.downloader vader_lexicon punkt stopwords averaged_perceptron_tagger
+
+# Create volume mount points with proper permissions
+RUN mkdir -p /app/staticfiles /app/frontend/dist && \
+    chmod -R 755 /app/staticfiles /app/frontend/dist
+
 # Copy project
 COPY . .
 
