Update Dockerfile for PyTorch GPU support; refactor NLTK data download to non-root user; modify data processing imports; update requirements for spaCy and gender-guesser

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.11-slim
+# Use PyTorch GPU base image
+FROM pytorch/pytorch:2.6.0-cuda12.6-cudnn9-runtime
 
 WORKDIR /app
 
@@ -12,8 +13,25 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Download NLTK data
-RUN python -m nltk.downloader vader_lexicon punkt stopwords averaged_perceptron_tagger
+# Install python-Levenshtein to remove fuzzywuzzy warning
+RUN pip install python-Levenshtein
+
+# Create non-root user earlier
+RUN useradd -m faireval
+RUN mkdir -p /home/faireval/nltk_data
+RUN chown -R faireval:faireval /home/faireval/nltk_data
+
+# Switch to non-root user before downloading NLTK data
+USER faireval
+
+# Download NLTK data to user's home directory
+RUN python -c "import nltk; nltk.data.path.append('/home/faireval/nltk_data'); nltk.download(['vader_lexicon', 'punkt', 'stopwords', 'averaged_perceptron_tagger'], download_dir='/home/faireval/nltk_data')"
+
+# Install spaCy model
+RUN python -m spacy download en_core_web_sm
+
+# Switch back to root for remaining setup
+USER root
 
 # Create volume mount points with proper permissions
 RUN mkdir -p /app/staticfiles /app/frontend/dist && \
@@ -22,8 +40,7 @@ RUN mkdir -p /app/staticfiles /app/frontend/dist && \
 # Copy project
 COPY . .
 
-# Run as non-root user
-RUN useradd -m faireval
+# Set final ownership and user
 RUN chown -R faireval:faireval /app
 USER faireval
 
