--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: ./backend
     command: >
       sh -c "python manage.py collectstatic --noinput &&
-             gunicorn faireval.wsgi:application --bind 0.0.0.0:8000"
+             gunicorn faireval.wsgi:application --bind 0.0.0.0:8000 --timeout 120"
     volumes:
       - ./backend:/app
       - frontend_build:/app/frontend/dist
