--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,8 @@ numpy==1.26.3
 scikit-learn==1.4.0
 gender-guesser==0.4.0
 fuzzywuzzy==0.18.0
+scipy>=1.9.0
+statsmodels>=0.14.0
 
 # Text processing and sentiment analysis
 spacy==3.8.4
@@ -24,6 +26,7 @@ contractions==0.1.73
 nltk==3.9.1
 textblob==0.17.1
 vaderSentiment==3.3.2
+wordcloud==1.9.4
 
 # API Documentation
 drf-spectacular==0.27.1
