--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - DJANGO_SETTINGS_MODULE=faireval.settings
       - SECRET_KEY=${DJANGO_SECRET_KEY}
       - DB_HOST=postgres
-      - DB_NAME=fair_eval_sys_db
+      - DB_NAME=faireval_db
       - DB_USER=postgres
       - DB_PASSWORD=password
       - DB_PORT=5432
@@ -35,7 +35,7 @@ services:
       - DEBUG=True
       - DJANGO_SETTINGS_MODULE=faireval.settings
       - DB_HOST=postgres
-      - DB_NAME=fair_eval_sys_db
+      - DB_NAME=faireval_db
       - DB_USER=postgres
       - DB_PASSWORD=password
       - CELERY_BROKER_URL=redis://redis:6379/0
@@ -53,7 +53,7 @@ services:
   postgres:
     image: postgres:13
     environment:
-      - POSTGRES_DB=fair_eval_sys_db
+      - POSTGRES_DB=faireval_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
     volumes:
