--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
     "@visx/wordcloud": "^3.3.0",
@@ -19,6 +20,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "6.29.0",
+    "react-wordcloud": "^1.2.7",
     "recharts": "^2.12.1",
     "tippy.js": "^6.3.7",
     "zod": "^3.22.4"
