--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "6.29.0",
+    "react-select": "^5.10.0",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.12.1",
     "tippy.js": "^6.3.7",
