--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,7 @@ nltk==3.9.1
 textblob==0.17.1
 vaderSentiment==3.3.2
 wordcloud==1.9.4
+tabulate==0.9.0
 
 # API Documentation
 drf-spectacular==0.27.1
