--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,21 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Add these lines after the system dependencies installation
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg \
+    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+    && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list \
+    && apt-get update \
+    && apt-get install -y \
+    google-chrome-stable \
+    chromium-chromedriver \
+    && rm -rf /var/lib/apt/lists/*
+
+# Make sure ChromeDriver is in PATH
+ENV PATH="/usr/lib/chromium-browser:${PATH}"
+
 # Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
