--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@headlessui/react": "^2.2.0",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
+    "@types/papaparse": "^5.3.15",
     "@visx/wordcloud": "^3.3.0",
     "axios": "^1.6.7",
     "lucide-react": "0.475.0",
+    "papaparse": "^5.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.50.1",
